# performance_monitor_next

./: .gitignore  README.md  pyproject.toml  requirements.txt
performance_monitor/: __init__.py
performance_monitor/assets/: strings.py
performance_monitor/cmd/: __init__.py  combiner.py  runner.py  settings.py  tools.py
performance_monitor/info_getter/: __init__.py  cpu_info.py  frame_time_info.py  general_gpu_info.py  hardware.py  info_combiner.py  memory_info.py  net_info.py  nv_gpu_info.py  time_info.py
performance_monitor/server/: __init__.py  combiner.py  handler.py  runner.py
performance_monitor/utils/: settings.py  strings.py  tools.py
